--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
     "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-vue": "^7.0.1",
     "jest": "^24.1.0",
-    "vue-jest": "^4.0.0-0",
-    "ts-jest": "^25.0.0"
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
+    "ts-jest": "^25.0.0",
+    "vue-eslint-parser": "^7.1.1",
+    "vue-jest": "^4.0.0-0"
   }
 }
