modify vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,31 @@
 {
-  "bookmarks.navigateThroughAllFiles": true,
-
   "breadcrumbs.enabled": true, // 階層リンク(パンくずリスト)の表示
-
-  "editor.autoIndent": "full",
-  "editor.codeActionsOnSave": {
+  // エディター設定
+  "editor.autoIndent": "full", // オートインデント
+  "editor.codeActionsOnSave": { // コード整形
     "source.fixAll.eslint": true,
-    "source.organizeImports": true,
-    "source.fixAll": true
+    "source.fixAll": true,
+    "source.organizeImports": true
   },
   "editor.codeLens": false,
-  "editor.cursorBlinking": "smooth", // カーソルの表示形式
   "editor.cursorStyle": "line", // カーソルの形状
-  "editor.cursorWidth": 2,
+  "editor.cursorBlinking": "smooth", // カーソルの表示形式
+  "editor.cursorWidth": 3, // カーソル幅
   "editor.detectIndentation": false,
-  "editor.emptySelectionClipboard": true, // 選択範囲無しでのコピーを許可
+  "editor.emptySelectionClipboard": false, // 選択範囲無しでのコピーを許可
   "editor.folding": true, // コードの折りたたみを許可
-  "editor.fontSize": 16,
-  "editor.formatOnPaste": false,
-  "editor.formatOnSave": false, // codeActionsOnSaveを使うのでfalse
+  "editor.fontSize": 14, //  文字サイズ
   "editor.formatOnType": true,
-  "editor.glyphMargin": true, // 行の左端に余白を作る
-  "editor.insertSpaces": true, // Tabキーで半角スペースを入力
-  "editor.quickSuggestions": { // 補完候補の自動表示
-    "comments": false, // コメント内では無効
-    "strings": true, // 文字列内では有効
-    "other": true // その他の場所で有効
+  "editor.formatOnPaste": false,
+  "editor.formatOnSave": false, // codeActionsOnSaveの方を使う
+  "[css]": {
+    "editor.formatOnSave": true
   },
+  "editor.insertSpaces": true, // Tabキーで半角スペースを入力
   "editor.letterSpacing": -1, // 文字の間隔を詰める
   "editor.lineNumbers": "on", // 行番号の表示
   "editor.links": true, // リンクをクリック可能に
-  "editor.matchBrackets": "never", // 対応する括弧の強調表示をオンに
+  "editor.matchBrackets": "always", // 対応する括弧の強調表示をオンに
   "editor.minimap.enabled": true, // ミニマップの表示
   "editor.minimap.maxColumn": 40, // ミニマップの幅
   "editor.minimap.renderCharacters": false, // ミニマップを簡略化
@@ -38,21 +33,26 @@
   "editor.minimap.side": "right", // ミニマップを右に表示
   "editor.mouseWheelScrollSensitivity": 0.7, // マウスホイール回転の移動係数
   "editor.mouseWheelZoom": false, // Ctrl+マウスホイールによるズームを無効化
+  "editor.glyphMargin": true, // 行の左端に余白を作る
+  "editor.quickSuggestions": { // 補完候補の自動表示
+    "comments": false, // コメント内では無効
+    "other": true, //  その他の場所で有効
+    "strings": true // 文字列内では有効
+  },
   "editor.renderControlCharacters": true, // 制御文字の表示
   "editor.renderIndentGuides": true, // インデントのガイドラインを表示
   "editor.renderLineHighlight": "all", // 選択中の行を強調する
-  "editor.renderWhitespace": "boundary", // 空白文字を表示する
+  "editor.renderWhitespace": "boundary",
   "editor.roundedSelection": true, // 選択範囲の角を丸める
   "editor.scrollBeyondLastLine": true, // 最終行よりも下へのスクロールを許可
+  "editor.snippetSuggestions": "top",
   "editor.suggestFontSize": 14, // サジェストの文字サイズ
   "editor.suggestLineHeight": 24, // サジェスト欄の行の高さ
   "editor.suggestSelection": "first",
   "editor.tabCompletion": "on",
   "editor.tabSize": 2,
-  "editor.wordWrap": "off", // 右端で折り返さない
-
-  "explorer.confirmDragAndDrop": false,
-
+  "editor.wordWrap": "off", // 右端で折り返す
+  // eslint
   "eslint.enable": true,
   "eslint.run": "onType",
   "eslint.validate": [
@@ -61,14 +61,16 @@
     "vue",
     "typescript"
   ],
-
   "extensions.ignoreRecommendations": false, // 推奨事項の通知をOFF
-
+  // エクスプローラー
+  "explorer.confirmDragAndDrop": false,
+  // ファイル設定
   "files.autoGuessEncoding": false, // 文字コードを自動判別
-  "files.autoSave": "onFocusChange", // ダーティファイルの作成を無効
+  "files.autoSave": "onFocusChange", //ダーティファイルの作成を無効
   "files.encoding": "utf8",
   "files.eol": "\n", // 改行コードをLF(Linux/OSX)にする
   "files.exclude": { // エクスプローラーから除外するファイルとフォルダ
+    "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
@@ -90,37 +92,40 @@
   "files.watcherExclude": { // CPU使用の軽減.サイズの大きいファイルがあるとCPU使用率が高くなることがある。
     "**/images/**": true
   },
-
+  // git
   "git.autofetch": true,
-
+  // HTML
   "html.format.enable": false,
   "html.format.endWithNewline": true,
   "html.format.contentUnformatted": "pre,code,textarea", // コンテンツを再フォーマットしてはならないタグをコンマで区切ってリストにする。'null' は、既定値の'pre' タグを表す。
   "html.format.wrapAttributes": "auto", // 属性を折り返す。
   "html.format.indentInnerHtml": true,
-
+  // indentRainbow
   "indentRainbow.colors": [
     "rgba(255,255,64,0.3)",
     "rgba(127,255,127,0.3)",
     "rgba(255,127,255,0.3)",
     "rgba(79,236,236,0.3)"
   ],
-
+  // JS
   "javascript.format.enable": false,
-  "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
   "javascript.updateImportsOnFileMove.enabled": "always",
-
   "nuxt-typescript-snippets.enable": true,
-
+  // peacock
+  "peacock.color": "#42b883",
+  // SCSS Formatter
+  "scssFormatter.printWidth": 120,
+  "scssFormatter.singleQuote": true,
+  // クラッシュレポートを送信する
   "telemetry.enableCrashReporter": true,
   "telemetry.enableTelemetry": true,
-
+  // ターミナル
   "terminal.integrated.rendererType": "dom",
-
+  // TS
   "typescript.format.insertSpaceBeforeFunctionParenthesis": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
   "typescript.autoImportSuggestions.enabled": true,
-
+  // vetur
   "vetur.format.defaultFormatter.css": "prettier",
   "vetur.format.defaultFormatter.html": "prettier",
   "vetur.format.defaultFormatter.js": "prettier-eslint",
@@ -130,35 +135,50 @@
   "vetur.format.defaultFormatter.ts": "vscode-typescript",
   "vetur.validation.style": true,
   "vetur.validation.template": false,
-
-  "vsicons.dontShowNewVersionMessage": true,
-  "vsicons.presets.jsonOfficial": true,
-
+  // vue
   "vue-helper.language": "en-US",
   "vue-helper.quotes": "single",
 
-  "window.closeWhenEmpty": true,
+  // vsicons
+  "vsicons.dontShowNewVersionMessage": true,
+  "vsicons.presets.jsonOfficial": true,
+  // ウィンドウ設定
+  "window.closeWhenEmpty": false,
   "window.zoomLevel": 0,
-
+  // ワークベンチ設定
+  "workbench.iconTheme": "vscode-icons",
   "workbench.colorCustomizations": {
-    "statusBar.noFolderBackground": "#000000",
-    "statusBar.noFolderForeground": "#ffffff",
-    "sideBar.background": "#000000",
-    "sideBar.foreground": "#ffffff",
+    "activityBar.activeBackground": "#65c89b",
+    "activityBar.activeBorder": "#945bc4",
+    "activityBar.background": "#65c89b",
     "activityBar.border": "#ffffff",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#945bc4",
+    "activityBarBadge.foreground": "#e7e7e7",
     "editor.background": "#121817",
     "editor.lineHighlightBackground": "#002255",
     "editor.selectionBackground": "#660000",
     "editorError.border": "#ff0000",
+    "editorBracketMatch.background": "#ffff0077",
     "editorLineNumber.foreground": "#0077ffbb",
     "editorLineNumber.activeForeground": "#ffffff",
-    "scrollbarSlider.background": "#0077ff99",
-    "scrollbarSlider.hoverBackground": "#00ccffcc",
-    "tab.inactiveForeground": "#999999",
-    "editorBracketMatch.background": "#ffff0077",
+    "editorLink.activeForeground": "#5555ce",
     "editorSuggestWidget.selectedBackground": "#0044ff",
     "scrollbar.shadow": "#0077ff99",
-    "editorLink.activeForeground": "#5555ce"
-  },
-  "workbench.iconTheme": "vscode-icons"
+    "scrollbarSlider.background": "#0077ff99",
+    "scrollbarSlider.hoverBackground": "#00ccffcc",
+    "statusBar.background": "#42b883",
+    "statusBar.foreground": "#15202b",
+    "statusBar.noFolderBackground": "#000000",
+    "statusBar.noFolderForeground": "#ffffff",
+    "statusBarItem.hoverBackground": "#359268",
+    "sideBar.background": "#000000",
+    "sideBar.foreground": "#ffffff",
+    "tab.inactiveForeground": "#999999",
+    "titleBar.activeBackground": "#42b883",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#42b88399",
+    "titleBar.inactiveForeground": "#15202b99"
+  }
 }
